<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:background="#CC000000"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/patr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/style_btn"
            android:textSize="20dp"
            android:text="@string/part1" />

        <Button
            android:id="@+id/patr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/style_btn"
            android:textSize="20dp"
            android:text="@string/part2" />

        <Button
            android:id="@+id/patr3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/style_btn"
            android:textSize="20dp"
            android:text="@string/part3" />

        <Button
            android:id="@+id/patr4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/style_btn"
            android:textSize="20dp"
            android:text="@string/part4" />

        <Button
            android:id="@+id/patr5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/style_btn"
            android:textSize="20dp"
            android:text="@string/part5" />

        <Button
            android:id="@+id/patr6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/style_btn"
            android:textSize="20dp"
            android:text="@string/part6" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>