<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#CC000000"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/chest_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/chest_finish"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/chest" />

        <CheckBox
            android:id="@+id/checkBox_upper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/colorGold"
            android:text="@string/chest_upper"
            android:textColor="#ffffff"
            android:textSize="30dp" />

        <CheckBox
            android:id="@+id/checkBox_flat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/colorGold"
            android:text="@string/chest_flat"
            android:textColor="#ffffff"
            android:textSize="30dp" />

        <CheckBox
            android:id="@+id/checkBox_lower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/colorGold"
            android:text="@string/chest_lower"
            android:textColor="#ffffff"
            android:textSize="30dp" />

        <CheckBox
            android:id="@+id/checkBox_tri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/colorGold"
            android:text="@string/chest_tri"
            android:textColor="#ffffff"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textColor="#FFFAFA"
                android:text="@string/weight"/>

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#FFFAFA"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/chest_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chest_LinearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/style_btn"
        android:text="@string/btn_finish"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>