<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:background="#CC000000"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:background="@drawable/style_btn"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_btn"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/btn_skip" />
        <Button
            android:id="@+id/btn_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_btn"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/btn_chart" />

        <Button
            android:id="@+id/btn_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_btn"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/btn_new" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>